# AutomotiveCluster

./: CMakeLists.txt  README.md  cluster-2d.pro
imageformats/: CMakeLists.txt  main.cpp  qpic.json  qpichandler.cpp  qpichandler.h
qml/gui/: CarBody.qml  ChargeBlock.qml  Footer.qml  GlobalDatas.qml  Motorama.qml  NavigationMap.qml  ScreenCharge.qml  ScreenSport.qml  ScreenWelcome.qml
qml/mainfiles/: main.qml
